# wio

./: 1.patch  10.patch  2.patch  3.patch  4.patch  5.patch  6.patch  7.patch  8.patch  9.patch  LICENSE  README.md  input.c  layers.c  main.c  meson.build  output.c  view.c
.cache/clangd/index/: colors.h.44C80207DECD6896.idx  input.c.7A4BEC9E37FF22B0.idx  layers.c.BE36342E36E42480.idx  layers.h.8F9556F602245789.idx  main.c.75DBF09DCBA8B494.idx  output.c.7D6C07E3A2C31681.idx  server.h.848131BA35689A55.idx  view.c.A00A277AA953DA7E.idx  view.h.B44CA91854DFAC08.idx
contrib/: alacritty.toml  alacritty.yml
include/: colors.h  layers.h  server.h  view.h
protocols/: meson.build
